--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/engineering22exam/DUexamIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Apar-Chinmoy Engineering 22</title>
-    <meta property="og:title" content="Apar-Chinmoy Engineering 22" />
-    <meta property="og:site_name" content="Apar-Chinmoy Engineering 22" />
-    <meta property="og:description" content="Apar-Chinmoy Engineering 22" />
+    <title>ACS Engineering Admission Private Batch</title>
+    <meta
+      property="og:title"
+      content="ACS Engineering Admission Private Batch"
+    />
+    <meta
+      property="og:site_name"
+      content="ACS Engineering Admission Private Batch"
+    />
+    <meta
+      property="og:description"
+      content="ACS Engineering Admission Private Batch"
+    />
     <meta property="og:image" content="/thumbnail.jpeg" />
     <meta property="og:image:secure_url" content="/thumbnail.jpeg" />
-    <script type="module" crossorigin src="/engineering22exam/assets/index.02769abc.js"></script>
-    <link rel="stylesheet" href="/engineering22exam/assets/index.f1ef7178.css">
+    <script type="module" crossorigin src="/engineering22exam/assets/index.f06cee32.js"></script>
+    <link rel="stylesheet" href="/engineering22exam/assets/index.42167060.css">
   </head>
   <body>
     <div id="app"></div>
