--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     />
     <meta property="og:image" content="/thumbnail.jpeg" />
     <meta property="og:image:secure_url" content="/thumbnail.jpeg" />
-    <script type="module" crossorigin src="/engineering22exam/assets/index.ed78a1fc.js"></script>
-    <link rel="stylesheet" href="/engineering22exam/assets/index.5524ef43.css">
   </head>
   <body>
     <div id="app"></div>
-    
+    <script>
+      window.location.href = "https://engineering.acsadmission.com/";
+    </script>
   </body>
 </html>
