--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/engineering22exam/DUexamIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ACS Engineering Admission Private Batch</title>
+    <title>Engineering Admission Batch 22</title>
+    <meta property="og:title" content="Engineering Admission Batch 22" />
+    <meta property="og:site_name" content="Engineering Admission Batch 22" />
+    <meta property="og:description" content="Engineering Admission Batch 22" />
     <meta
-      property="og:title"
-      content="ACS Engineering Admission Private Batch"
+      property="og:image"
+      content="https://i.postimg.cc/s21KZJ9k/16-9-HSC-22.jpg"
     />
     <meta
-      property="og:site_name"
-      content="ACS Engineering Admission Private Batch"
+      property="og:image:secure_url"
+      content="https://i.postimg.cc/s21KZJ9k/16-9-HSC-22.jpg"
     />
-    <meta
-      property="og:description"
-      content="ACS Engineering Admission Private Batch"
-    />
-    <meta property="og:image" content="/thumbnail.jpeg" />
-    <meta property="og:image:secure_url" content="/thumbnail.jpeg" />
+    <meta property="og:url" content="https://varsity.acsadmission.com" />
+    <meta property="og:type" content="EdTech" />
+    <meta property="fb:app_id" content="905085926919735" />
+    <script type="module" crossorigin src="/engineering22exam/assets/index.36876eab.js"></script>
+    <link rel="stylesheet" href="/engineering22exam/assets/index.39ec0585.css">
   </head>
   <body>
     <div id="app"></div>
-    <script>
-      window.location.href = "https://engineering.acsadmission.com/";
-    </script>
+    
   </body>
 </html>
