--- a/index.html
+++ b/index.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/engineering22exam/DUexamIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Engineering Admission Batch 22</title>
-    <meta property="og:title" content="Engineering Admission Batch 22" />
-    <meta property="og:site_name" content="Engineering Admission Batch 22" />
-    <meta property="og:description" content="Engineering Admission Batch 22" />
-    <meta
-      property="og:image"
-      content="https://i.postimg.cc/s21KZJ9k/16-9-HSC-22.jpg"
-    />
-    <meta
-      property="og:image:secure_url"
-      content="https://i.postimg.cc/s21KZJ9k/16-9-HSC-22.jpg"
-    />
-    <meta property="og:url" content="https://varsity.acsadmission.com" />
-    <meta property="og:type" content="EdTech" />
-    <meta property="fb:app_id" content="905085926919735" />
+       <!-- Site Title -->
+       <title>Engineering Admission Private Batch 2022 | Exam</title>
+
+       <!-- Facebook Metas -->
+       <meta property="og:title" content="Engineering Admission Private Batch 2022">
+       <meta property="og:site_name" content="Engineering Admission Private Batch 2022">
+       <meta property="og:description" content="By Apar,Chinmoy, Abhi, Sanjoy ❤️">
+       <meta property="og:image"
+           content="https://www.aiche.org/sites/default/files/styles/chenected_lead_image/public/images/Chenected/lead/shutterstock411197581.jpg?itok=p0wQIykw">
+       <meta property="og:image:secure_url"
+           content="https://www.aiche.org/sites/default/files/styles/chenected_lead_image/public/images/Chenected/lead/shutterstock411197581.jpg?itok=p0wQIykw">
+       <meta property="og:image:type" content="image/webp">
     <script type="module" crossorigin src="/engineering22exam/assets/index.599ac3b1.js"></script>
     <link rel="stylesheet" href="/engineering22exam/assets/index.3cb8cba9.css">
   </head>
